bin/testsuite/tests/compiler/src/errors/compiler4653.swg
#global testerror "Err0734"

#test
{
    const a: any = 6
    let b    = a + 6
}
